# paper-list

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
deploy/: README.txt  install.sh  paper-server.service
public/: admin.html  index.html
server/: handlers.rs  main.rs  models.rs  storage.rs
